--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="products">
             <h1 class="home-title">
                 <!-- Welcome message with a scrolling effect using <marquee> tag -->
-                <marquee bgcolor="green" style="width: 1000px;border-radius: 4px;">
+                <marquee bgcolor="green" style="width: 900px;border-radius: 4px;">
                     🌟 Welcome to our online cosmetic shop, where beauty 💄 meets affordability 💰 with top-quality products for everyone! ✨🛍️
                 </marquee>
             </h1>
@@ -38,6 +38,17 @@
             </div>
         </section>
     </div>
+    <div id="product-list"></div>
+<div class="cart" style="display: none;">
+    <h2>Shopping Cart</h2>
+    <ul id="cart-items"></ul>
+    <p>Total: $<span id="cart-total">0.00</span></p>
+    <p>Items: <span id="cart-count">0</span></p>
+    <button onclick="checkout()">Checkout</button>
+    <button onclick="closeCart()">Close</button>
+</div>
+<button onclick="toggleCart()">Toggle Cart</button>
+
 
     <!-- Cart Icon (Appears on the page to toggle cart visibility) -->
     <div class="cart-icon" onclick="toggleCart()">
